--- a/hitroupe-frontend/src/app/components/navbar/navbar.component.html
+++ b/hitroupe-frontend/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-light bg-light justify-content-between">
-  <a class="navbar-brand">HiTroupe</a>
+<nav class="navbar bg-light justify-content-between">
+  <a class="navbar-brand pull-left">HiTroupe</a>
   <form class="form-inline">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">login</button>
+    <button class=" pull-right btn btn-outline-success my-2 my-sm-0" type="submit">login</button>
   </form>
 </nav>
