--- a/hitroupe-frontend/src/app/components/search/search.component.html
+++ b/hitroupe-frontend/src/app/components/search/search.component.html
@@ -1,3 +1,4 @@
-<div class="md-form">
-  <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-</div>
+<mat-form-field>
+  <textarea matInput placeholder="Autosize textarea" matTextareaAutosize matAutosizeMinRows="2"
+            matAutosizeMaxRows="5"></textarea>
+</mat-form-field>
