--- a/hitroupe-frontend/src/app/components/search/search.component.html
+++ b/hitroupe-frontend/src/app/components/search/search.component.html
@@ -1,4 +1,5 @@
-<mat-form-field>
-  <textarea matInput placeholder="Autosize textarea" matTextareaAutosize matAutosizeMinRows="2"
-            matAutosizeMaxRows="5"></textarea>
-</mat-form-field>
+<div class="col-lg-4 col-md-offset-4">
+  <mat-form-field>
+  <textarea matInput placeholder="Search group" matTextareaAutosize></textarea>
+  </mat-form-field>
+</div>
