--- a/hitroupe-frontend/src/app/components/navbar/navbar.component.html
+++ b/hitroupe-frontend/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,10 @@
-<nav class="navbar bg-light justify-content-between">
-  <a class="navbar-brand pull-left">HiTroupe</a>
-  <form class="form-inline">
-    <button class=" pull-right btn btn-outline-success my-2 my-sm-0" type="submit">login</button>
-  </form>
-</nav>
+<mat-card>
+  <div class="container">
+    <div class="header">
+      <ul class="nav pull-right">
+        <li><a href="#">Login</a></li>
+      </ul>
+      <h3 class="text-muted">HiTroupe</h3>
+    </div>
+  </div>
+</mat-card>
