--- a/hitroupe-frontend/src/styles.css
+++ b/hitroupe-frontend/src/styles.css
@@ -1,2 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+mat-form-field {
+  width: 100%;
+  font-size: 16px !important;
+  margin-top: 8%;
+}
+
+.fucking-center {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
