--- a/hitroupe-frontend/src/app/components/search/search.component.html
+++ b/hitroupe-frontend/src/app/components/search/search.component.html
@@ -2,4 +2,8 @@
   <mat-form-field>
     <textarea matInput placeholder="Search group" matTextareaAutosize></textarea>
   </mat-form-field>
+  <ul *ngFor="let tag of tags">
+    <mat-checkbox>{{tag}}</mat-checkbox>
+  </ul>
+
 </div>
