--- a/hitroupe-frontend/src/app/components/group-form/group-form.component.css
+++ b/hitroupe-frontend/src/app/components/group-form/group-form.component.css
@@ -1,7 +1,17 @@
+agm-map {
+  height: 300px;
+}
+
 h1 {
   margin-top: 4%;
 }
 
 button {
   margin-bottom: 5%;
+}
+
+mat-slider{
+  width: 100%;
+  margin-left: 10px;
+  margin-right: 10px;
 }
