--- a/hitroupe-frontend/src/app/components/group-form/group-form.component.html
+++ b/hitroupe-frontend/src/app/components/group-form/group-form.component.html
@@ -21,15 +21,15 @@
 
 
     <mat-slider
-      name="radius"
+      name="group.radius"
       [max]="max"
       [min]="min"
-      [(ngModel)]="radius">
+      [(ngModel)]="group.radius">
     </mat-slider>
 
     <agm-map [latitude]="initial_lat" [longitude]="initial_lon" [zoom]="15" (mapClick)="placeMarker($event)">
       <agm-marker [latitude]="group.latitude" [longitude]="group.longitude"></agm-marker>
-      <agm-circle [radius]="radius" [latitude]="group.latitude" [longitude]="group.longitude"></agm-circle>
+      <agm-circle [radius]="group.radius" [latitude]="group.latitude" [longitude]="group.longitude"></agm-circle>
     </agm-map>
 
     <br>
