--- a/hitroupe-frontend/src/app/components/group-form/group-form.component.html
+++ b/hitroupe-frontend/src/app/components/group-form/group-form.component.html
@@ -14,7 +14,7 @@
     </mat-form-field>
 
     <mat-form-field>
-      <input [(ngModel)]="group.numberOfPeople" name="numberOfPeople" type="number" min="1" matInput placeholder="Number of people">
+      <input [(ngModel)]="group.targetNumberOfPeople" name="numberOfPeople" type="number" min="1" matInput placeholder="Number of people">
     </mat-form-field>
 
     <ngui-map zoom="9" minZoom="2">
