--- a/hitroupe-frontend/src/app/components/search/search.component.html
+++ b/hitroupe-frontend/src/app/components/search/search.component.html
@@ -1,6 +1,6 @@
 <div class="col-lg-4 col-md-offset-4">
   <mat-form-field>
-    <textarea matInput placeholder="Search group" matTextareaAutosize></textarea>
+    <input matInput placeholder="Search group" id="search">
   </mat-form-field>
   <ul *ngFor="let tag of tags">
     <mat-checkbox>{{tag}}</mat-checkbox>
